[metadata]
name = svglob
version = 0.0.1
author = Jared Deckard
author_email = jared@shademaps.com
description = Combine SVG paths into one compound path.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deckar01/svglob
project_urls =
    Bug Tracker = https://github.com/deckar01/svglob/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.6
install_requires =
    numpy == 1.20.3
    svgwrite == 1.4.1
    svgpathtools == 1.4.1
